src/components/beta/gux-alert/gux-inline-alert.less
@import (reference) '../../../style/color.less';
@import (reference) '../../../style/mixins.less';
@import (reference) '../../../style/spacing.less';
@import (reference) '../../../style/typography.less';
@import (reference) '../../../style/color-palette.less';

:host {
  display: block;
}

.gux-inline-alert {
  display: flex;
  flex-direction: row;
  flex-wrap: nowrap;
  gap: @gux-spacing-xs;
  align-items: center;
  justify-content: flex-start;
  padding: @gux-spacing-2xs @gux-spacing-xs;
  border-radius: @gux-spacing-2xs;
  .body-font();

  gux-icon {
    flex-shrink: 0;
    align-self: flex-start;
    width: 16px;
    height: 16px;
    margin-top: @gux-spacing-3xs;
  }

  gux-tooltip-title {
    white-space: nowrap;
  }

  .gux-sr-only {
    .gux-sr-only-clip();
  }

  &.gux-info {
    color: @gux-black-80;
    background-color: @gux-grey-90;
  }

  &.gux-error {
    color: @gux-alert-red-30;
    background-color: @gux-alert-red-100;
  }

  &.gux-warning {
    color: @gux-alert-yellow-30;
    background-color: @gux-alert-yellow-100;
  }

  &.gux-success {
    color: @gux-alert-green-30;
    background-color: @gux-alert-green-100;
  }
}

